# matrixmail

./: .gitignore  .vampus.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.sample.yml  docker-compose.yml
.github/workflows/: release.yml
src/: main.rs
src/models/: bot.rs  config.rs  error.rs  imap.rs  mail.rs  matrix.rs  mod.rs  openai.rs
