[package]
name = "matrixmail"
version = "0.1.4"
edition = "2021"
description = "Bridge between IMAP email and Matrix chat rooms with LLM-powered responses"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = "0.11.2"
async-native-tls = "0.6.0"
async-std = { version = "1.13.2", features = ["attributes"] }
futures = "0.3.32"
imap-proto = "0.16.7"
mail-parser = "0.11.3"
openssl = { version = "0.10.81", features = ["vendored"] }
pulldown-cmark = "0.13.4"
reqwest = { version = "0.13.4", features = ["json", "query"] }
rustix = { version = "1.1.4", features = ["process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
